# modular_resolution

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  config.h.in  configure.ac
src/: COPYING  Makefile.am  aufloesung.c  aufloesung_decls.h  aufnahme.c  aufnahme.h  fileplus.c  fileplus.h  fp_decls.h  gi.c  mam.c  mim.c  mnt.c  modular_resolution.h  nBuchberger.c  nBuchberger_decls.h  nDiag.h  pcommon.h  perm2Gap.c  pgroup.c  pgroup.h  pgroup_decls.h  pincl.c  pincl.h  pincl_decls.h  slice.c  slice_decls.h  test.reg  urbild.c  urbild_decls.h
